# pozk-shuffle

./: README.md
prover/: .gitignore  Cargo.toml
prover/examples/: mock-input.rs  mock-task.rs
prover/src/: main.rs
test/: test_inputs_20  test_inputs_52  test_miner_20  test_miner_52
verifier/: .gitignore  README.md  hardhat.config.js  package.json
verifier/contracts/: IProver.sol  IVerifier.sol  Shuffle.sol  Shuffle20.sol  Shuffle20Verifier.sol  Shuffle52.sol  Shuffle52Verifier.sol  VerifierKey_20_1.sol  VerifierKey_20_2.sol  VerifierKey_52_1.sol  VerifierKey_52_2.sol
verifier/scripts/: abi.js  address_utils.js  deploy.js  update_config.js  upgrade.js
